app/static/css/default.css
/* ... */
a:active {
  text-decoration: underline;
}

.header {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  width: 100%;
  justify-content: flex-start;
}

.title {
  padding: 3px 20px 3px 10px;
  font-weight: bold;
  font-size: 18pt;
}

.title img {
  height: 1.6em;
}

.fillSpace {
  flex: auto;
}

.settingsButton {
  width: 16px;
  height: 16px;
  padding-left: 6px;
  padding-right: 6px;
  cursor: pointer;
  fill: var(--textColor);
}

#facsimileCloseButton {
  fill: var(--dropdownBorderColor);
}

.rightMargin {
  margin-right: 6px;
}

#focusIndicator {
  display: inline-block;
  position: fixed;
  padding-left: 10px;
  padding-top: 10px;
  transform: scale(50%, 50%);
  stroke: var(--fileStatusColor);
  z-index: 100;
}

.dragOverlay {
  position: fixed;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 50px;
  border: 5px solid var(--overlayBorderColor);
  border-radius: 32px;
  background-color: var(--overlayBackgroundColor);
  background-blend-mode: difference;
  opacity: 0.95;
  z-index: 200;
}

.dragOverlayText {
  position: absolute;
  top: 50%;
  left: 50%;
  font-size: 28pt;
  color: var(--overlayTextColor);
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}

.openUrlOverlay,
#githubActionsOverlay,
#solidOverlay,
#splashOverlay {
  flex-direction: row;
  justify-content: center;
  position: fixed;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #d7e3f4cc;
  z-index: 190;
}

#solidOverlay.active {
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

#solidLoadingIndicator:hover {
  text-decoration: underline;
}

#solidOverlayCancel span {
  font-family: monospace;
}

#solidLoadingIndicator {
  border-radius: 32px;
  background-color: rgba(255, 255, 255, 0.7);
  width: 200px;
  height: fit-content;
  z-index: 190;
  text-align: center;
}

#solidLoadingIndicator svg {
  width: 200px;
}

#githubActionsUI {
  display: flex;
  flex-direction: column;
  padding: 1em;
  height: fit-content !important;
}

.githubActionsInputConfig {
  display: flex;
  flex-direction: row;
  align-items: end;
  background-color: var(--navbarBackgroundColor);
  border-radius: 1em;
  width: 90%;
  padding: 0.5em;
  margin-bottom: 0.5em;
}

.githubActionsInputConfig span {
  color: var(--textColor);
}

.githubActionsInputSetter {
  cursor: pointer;
}

.githubActionsInputSetter svg {
  fill: var(--textColor);
}

.githubActionsInputConfig div {
  padding-left: 0.5em;
  padding-right: 0.5em;
}

.githubActionsInputFieldWrapper {
  flex: 1;
}

.githubActionsInputField {
  width: 95%;
}

.dropdownContent a.disabled {
  pointer-events: none;
}

.actionsContainer.notAllowed {
  cursor: not-allowed;
}

.openUrlOverlay a,
.forkRepositoryOverlay a {
  color: var(--overlayLinkColor);
}

.openUrlOverlay .openUrlUI,
.forkRepositoryOverlay .forkRepositoryUI,
#splash,
#githubActionsUI {
  position: absolute;
  top: 20%;
  left: 20%;
  width: 60%;
  height: 60%;
  border: 5px solid var(--overlayBorderColor);
  border-radius: 32px;
  background-color: var(--overlayBackgroundColor);
  color: var(--overlayTextColor);
  z-index: 190;
}

#splash {
  padding: 1em 1em;
  max-width: 600px;
  min-width: 250px;
  max-height: 400px;
  left: unset;
}

#splashHeader {
  text-align: center;
  margin-bottom: 1em;
}

#splashHeader img {
  width: 95%;
  max-height: 500px;
}

#splashBodyContainer {
  padding: 0em 1em;
  height: 45%;
  overflow-y: auto;
  color: black;
  background-color: var(--overlayTextColor);
  border-radius: 10px;
}

#splashUpdateIndicator {
  display: none;
  font-style: italic;
}

/** start loading animation for splash screen text (not used for now) */
/* 
#splashBodyLoading { 
  position:relative;
  left: calc(50% - 1em);
  top: 50%;
}

#splashBodyLoading:after {
    content: '\00a0\00a0\00a0';
    animation: progress-ellipsis 0.8s infinite;
}

@keyframes progress-ellipsis {
    0% {
        content: '\00a0\00a0\00a0';
    }
    25% {
        content: '.\00a0\00a0';
    }
    50% {
        content: '..\00a0';
    }
    75% {
        content: '...';
    }
} 
*/
/** end loading animation for splash screen text **/

#splashFooter {
  font-size: small;
}

#splashVersion {
  margin: 1em 1em;
}

#splashVersionNumber a {
  color: var(--overlayLinkColor);
}

#splashAlwaysShowCtrl {
  float: right;
}

.openUrlOverlay .openUrlUI > div,
.forkRepositoryOverlay .forkRepositoryUI > div {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 80%;
  transform: translate(-50%, -50%);
}

.openUrlOverlay .openUrlUI details,
.forkRepositoryOverlay .forkRepositoryUI details,
#githubActionsUI details,
#githubActionsUI button {
  cursor: pointer;
  margin-bottom: 1em;
}

#githubActionsUI details label {
  font-family: monospace;
  cursor: pointer;
}

.openUrlOverlay .openUrlUI details > div,
.forkRepositoryOverlay .forkRepositoryUI details > div {
  margin-left: 1em;
}

.openUrlOverlay .openUrlUI input {
  width: 70%;
}

.openUrlOverlay .openUrlUI details div div,
.forkRepositoryOverlay .forkRepositoryUI details div div {
  padding: 10px 15px;
}

.openUrlOverlay select,
.forkRepositoryOverlay select {
  text-align: left;
}

#openUrlStatus {
  font-size: 8pt;
  color: var(--fileStatusWarnColor);
  visibility: hidden;
}

#openUrlStatus.warn {
  visibility: visible;
}

#openUrlInput.warn {
  border: 1px solid var(--fileStatusWarnColor);
  background-color: var(--navbarBackgroundColor);
}

.forkAndOpenOverlay,
.forkRepositoryOverlay {
  position: fixed;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 190;
}

.forkRepositoryOverlay .forkRepositoryUI input {
  width: 30%;
}

.forkRepositoryStatus {
  font-size: 8pt;
  color: var(--fileStatusWarnColor);
  visibility: hidden;
}

.forkRepositoryStatus.warn {
  visibility: visible;
}

#forkRepositoryInput.warn {
  border: 1px solid var(--fileStatusWarnColor);
  background-color: mistyrose;
}
/* ... */

